# Myphz

./: .dockerignore  .eslintrc.cjs  .prettierrc.json  Cargo.toml  Dockerfile  Procfile  README.md  build.sh  deploy.sh  fly.toml  index.html  package-lock.json  package.json  resume.odt  rust-toolchain  tailwind.config.js  tailwind.config.ts  tsconfig.app.json  vite.config.ts
.github/workflows/: fly.yml  gh_pages.yml
assets/: index.08e29dd4.js  index.4e21723b.css
public/: resume.odt
src/: App.tsx  App.vue  config.ts  email.rs  main.rs  main.ts  main.tsx
src/assets/: fonts.css  iosevka.css  main.css  reset.css  system.css  utils.css
src/assets/sass/: _utilities.sass  _variables.sass  layout.sass
src/components/: Blobs.vue  Button.vue  CloseBracket.vue  Experience.vue  Experiences.vue  Footer.vue  FromAbove.vue  Hamburger.vue  Header.vue  Input.vue  Layout.tsx  LoadingIcon.vue  MainText.vue  Menu.vue  Navbar.vue  PageIndicator.vue  PageWrapper.vue  Project.vue  Projects.vue  Skill.vue  SortText.vue  Textarea.vue  Typing.vue  TypingAlternate.vue  VariableFontTypingText.vue
src/components/Button/: index.tsx  style.sass
src/components/Contacts/: index.tsx  style.sass
src/components/Decorations/: index.tsx  style.sass
src/components/Footer/: index.tsx  style.sass
src/pages/: About.vue  Animation.vue  Contact.vue  Home.tsx  Landing.vue  Projects.vue  Skills.vue  Talk.vue  Work.vue
src/router/: index.ts
src/utilities/: fetch.ts  ogl.ts
src/utils/: clickoutside.ts  dom.ts  ogl.ts  pages.ts  scroll.ts  slots.ts  store.ts  tabs.ts
(+20 files in other folders)
