[package]
name = "devfolio_be"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"] }
validator = { version = "0.12", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
lettre = "0.10.0-rc.6"